identity-platform/gke/istio/virtualservice.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# https://istio.io/docs/reference/config/networking/v1alpha3/virtual-service/

# [START run_gke_auth_identityplatform_virtualservice]
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cloud-run-gke-auth
spec:
  gateways:
  - gke-system-gateway.knative-serving.svc.cluster.local
  hosts:
  - "*"
  http:
  - match:
    - uri:
        prefix: "/api/"
    rewrite:
      authority: backend.api.svc.cluster.local
    route:
    - destination:
        host: cluster-local-gateway.gke-system.svc.cluster.local
  - match:
    - uri:
        prefix: "/"
    rewrite:
      authority: frontend.public.svc.cluster.local
    route:
    - destination:
        host: cluster-local-gateway.gke-system.svc.cluster.local
# [END run_gke_auth_identityplatform_virtualservice]
